fix(virtualGame_api): modifications api's actions.